Add comment to footer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
       </div>
       <!-- Sofiia block end-->
-      <!--Roman Hrytsyshyn start-->
+      <!--Roman Hrytsyshyn HTML Block 1 start-->
       <div class="header__info">
         <h1 class="header__introduction">
           <strong>DESIGNER CLOTHES</strong>
@@ -50,7 +50,7 @@
         </div>
       </div>
     </section>
-    <!--Roman Hrytsyshyn end-->
+    <!--Roman Hrytsyshyn HTML Block 1 end-->
   </header>
   <main class="main">
     <!--Roman Fedoriv start block 3-->
