Changed css why_choose_us Svitlana block

--- a/index.html
+++ b/index.html
@@ -123,40 +123,56 @@
 
     <!--Svitlana Stasiuk block start-->
     <section class="why_choose_us">
-      <div class="why_choose_us__background"></div>
-      <div class="why_choose_us__text" id="why_choose_us">
-        <h2 class="why_choose_us__h2">WHY CHOOSE US</h2>
-        <h3 class="why_choose_us__h3">
-          <span class="why_choose_us__text__slogan__dash">—</span>Things
-          You'll Love About Jolly House.
-        </h3>
-        <h5 class="why_choose_us__h5">
-          We create each outfit for you with great love and care.
-        </h5>
-        <div class="why_choose_us__text__slogan">
-          <h4>
-            <span class="why_choose_us__text__slogan__dash">—</span>Jolly
-            brand is:
-          </h4>
-          <ol class="why_choose_us_text__list">
-            <li class="why_choose_us__text__list1">
-              Capsule collections you can wear on any occasion;
-            </li>
-            <li class="why_choose_us__text__list1">
-              Only high quality and eco-friendly materials;
-            </li>
-            <li class="why_choose_us__text__list1">
-              A great variety of outfits for every taste and size.
-            </li>
-          </ol>
+      <div class="why_choose_us__background">
+        <div class="why-choose_us__container" id="why_choose_us">
+          <div class="why-choose_us__container__inner">
+            <div class="why-choose_us__container__inner__grid">
+              <div class="why-choose_us__container__empty"></div>
+              <div class="why-choose_us__container__inner__grid__top">
+                <div class="why-choose_us__title-box">
+                  <h2 class="why-choose_us__title__name">WHY CHOOSE US</h2>
+                </div>
+                <div class="why-choose_us__subtitle-box">
+                  <h3 class="why-choose_us__subtitle__name"><span class="why-choose_us__dash">—</span>Things
+                    You'll Love About Jolly House.</h3>
+                </div>
+                <div class="why_choose_us__slogan-box">
+                  <h5 class="why_choose_us__slogan__name">We create each outfit for you with great love and care.
+                  </h5>
+                </div>
+                <div class="why_choose_us__list-box">
+                  <h4 class="why_choose_us__list-box__title"><span class="why_choose_us__dash">—</span>Jolly
+                    brand is:</h4>
+                  <ol class="why_choose_us__text__list">
+                    <li class="why_choose_us__text__list__item">
+                      Capsule collections you can wear on any occasion;
+                    </li>
+                    <li class="why_choose_us__text__list__item">
+                      Only high quality and eco-friendly materials;
+                    </li>
+                    <li class="why_choose_us__text__list__item">
+                      A great variety of outfits for every taste and size.
+                    </li>
+                  </ol>
+                </div>
+                <div class="why_choose_us__paragraf-box">
+                  <p class="why_choose_us__paragraph">
+                    We know the main problem of all women – a lot of clothes in the
+                    wardrobe but nothing to wear. Therefore, we develop capsule
+                    collections where clothes go well with each other. You can mix
+                    them as well to create stunning new looks!</p>
+                </div>
+                <div class="customization__button">
+                  <div class="customization__button__container">
+                    <div class="customization__button__inner">
+                      <a class="customization__button__button"><span class="customization__button__text"> Learn More + </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <p class="why_choose_us__text__paragraph">
-          We know the main problem of all women – a lot of clothes in the
-          wardrobe but nothing to wear. Therefore, we develop capsule
-          collections where clothes go well with each other. You can mix them
-          as well to create stunning new looks!
-        </p>
-        <a href="#" class="why_choose_us__lean-more-link">Learn More +</a>
       </div>
     </section>
     <!--Svitlana Stasiuk block end-->
@@ -331,59 +347,6 @@
       </div>
     </div>
     <!-- Sofiia block end-->
-        <!-- Roman Hrytsyshyn HTML Block 2 Start -->
-<section class="collection">
-   <div class="collection__block">
-    <div class="collection__header" id="collection__header">
-      <h2 class="collection__header-text">COLLECTION</h2>
-      <h3 class="collection__slogan"><span class="collection__slogan-dash">—</span> Select Your <br class="new-line"/> Perfect Look.</h3>
-      <p class="collection__description">Check out our new capsule collection and add items you like the most to the shopping cart!</p>
-    </div>
-    <section class="collection__cards">
-      <article class="collection__card">
-        <img src="img/collection-block/card__knitted-midi-dress.png" alt="Knitted Midi Dress">
-        <h4 class="collection__card-text">Knitted Mini Dress</h4>
-        <p class="card__price">150,00 USD</p>
-        <div class="collection__card-button">
-          <button class="collection-card-button__add-to-cart">
-            <span class="button__add-to-cart-text">Add to Cart</span><span class="plus"> +</span>
-          </button>
-        </div>
-      </article>
-      <article class="collection__card">
-        <img src="img/collection-block/card__blazer-dress.png" alt="Blazer Dress">
-        <h4 class="collection__card-text">Blazer Dress</h4>
-        <p class="card__price">120,00 USD</p>
-        <div class="collection__card-button">
-          <button class="collection-card-button__add-to-cart">
-            <span class="button__add-to-cart-text">Add to Cart</span><span class="plus"> +</span>
-          </button>
-        </div>
-      </article>
-      <article class="collection__card">
-        <img src="img/collection-block/card__white-blazer.png" alt="White Blazer">
-        <h4 class="collection__card-text">White Blazer</h4>
-        <p class="card__price">80,00 USD</p>
-        <div class="collection__card-button">
-          <button class="collection-card-button__add-to-cart">
-            <span class="button__add-to-cart-text">Add to Cart</span><span class="plus"> +</span>
-          </button>
-        </div>
-      </article>
-      <article class="collection__card">
-        <img src="img/collection-block/card__lace-top.png" alt="Lace Top">
-        <h4 class="collection__card-text">Lace Top</h4>
-        <p class="card__price">40,00 USD</p>
-        <div class="collection__card-button">
-          <button class="collection-card-button__add-to-cart">
-            <span class="button__add-to-cart-text">Add to Cart</span><span class="plus"> +</span>
-          </button>
-        </div>
-      </article>
-    </section>
-  </div>
-</section>
-   <!-- Roman Hrytsyshyn HTML Block 2 Start -->
     <!--Roman Fedoriv start block -->
     <section class="customization">
       <div class="customization-background">
@@ -425,15 +388,10 @@
       </div>
     </section>
     <!--Roman Fedoriv end block -->
-
-
   </main>
 
-  <footer>
-    <!--
-      Here is a footer
-    -->
-  </footer>
+
+  <footer></footer>
 
 </body>
 
