--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   <h2 class="why-choose_us__title__name">WHY CHOOSE US</h2>
                 </div>
                 <div class="why-choose_us__subtitle-box">
-                  <h3 class="why-choose_us__subtitle__name"><span class="why-choose_us__dash">—</span>Things
+                  <h3 class="why-choose_us__subtitle__name"><span class="why_choose_us__dash">—</span>Things
                     You'll Love About Jolly House.</h3>
                 </div>
                 <div class="why_choose_us__slogan-box">
