Chanched size for image, end span to h3

--- a/index.html
+++ b/index.html
@@ -231,9 +231,8 @@
       <div class="accessories__first">
         <div class="accessories__description">
           <h2 class="accessories__text">ACCESSORIES</h2>
-          <h3 class="accessories__title">
-            Treat Yourself to New Accessories.
-          </h3>
+          <h3 class="accessories__title"><span> — </span>
+            Treat Yourself to New Accessories.</h3>
           <p class="accessories__about">
             We create accessories that perfectly match the outfits.
           </p>
