Added background Svitlana block

--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
     <!--Svitlana Stasiuk block start-->
     <section class="why_choose_us">
       <div class="why_choose_us__background">
-        <div class="why-choose_us__container" id="why_choose_us">
-          <div class="why-choose_us__container__inner">
-            <div class="why-choose_us__container__inner__grid">
-              <div class="why-choose_us__container__empty"></div>
-              <div class="why-choose_us__container__inner__grid__top">
-                <div class="why-choose_us__title-box">
-                  <h2 class="why-choose_us__title__name">WHY CHOOSE US</h2>
+        <div class="why_choose_us__container" id="why_choose_us">
+          <div class="why_choose_us__container__inner">
+            <div class="why_choose_us__container__inner__grid">
+              <div class="why_choose_us__container__empty"></div>
+              <div class="why_choose_us__container__inner__grid__top">
+                <div class="why_choose_us__title-box">
+                  <h2 class="why_choose_us__title__name">WHY CHOOSE US</h2>
                 </div>
-                <div class="why-choose_us__subtitle-box">
-                  <h3 class="why-choose_us__subtitle__name"><span class="why_choose_us__dash">—</span>Things
+                <div class="why_choose_us__subtitle-box">
+                  <h3 class="why_choose_us__subtitle__name"><span class="why_choose_us__dash">—</span>Things
                     You'll Love About Jolly House.</h3>
                 </div>
                 <div class="why_choose_us__slogan-box">
@@ -162,10 +162,11 @@
                     collections where clothes go well with each other. You can mix
                     them as well to create stunning new looks!</p>
                 </div>
-                <div class="customization__button">
-                  <div class="customization__button__container">
-                    <div class="customization__button__inner">
-                      <a class="customization__button__button"><span class="customization__button__text"> Learn More + </a>
+                <div class="why_choose_us__button">
+                  <div class="why_choose_us__button__container">
+                    <div class="why_choose_us__button__inner">
+                      <a class="why_choose_us__button__button"><span class="why_choose_us__button__text"> Learn More +
+                      </a>
                     </div>
                   </div>
                 </div>
