Added html for modl-form nad created customization-form.css

--- a/index.html
+++ b/index.html
@@ -440,6 +440,49 @@
           </div>
         </div>
       </div>
+      <div class="customization__modal-form">
+        <div class="customization__modal-form__container">
+          <div class="container__close-icon">            
+          </div>
+          <div class="customization__modal-form__container__inner">
+            <div class="inner__form-section">
+              <div class="inner__form-section__container">
+                <div class="inner__form-section__container__grid">
+                  <div class="inner__form-section__container__grid__inner">
+                    <div class="grid__inner__box">
+                      <div class="grid__inner__box__form">
+                        <h2 class="grid__inner__box__form__title"></h2>
+                        <h3 class="grid__inner__box__form__subtitle"></h3>
+                        <div class="grid__inner__box__form">
+                          <form action="" class="customization__modal-form__form-box">
+                            <div class="customization__modal-form__form-box__name">
+                              <input type="text" class="customization__modal-form__form-box__name__input"placeholder="Your message">
+                            </div>
+                            <div class="customization__modal-form__form-box__phone">
+                              <input type="tel" class="customization__modal-form__form-box__phone__input"placeholder="Your message">
+                            </div>
+                            <div class="customization__modal-form__form-box__email">
+                              <input type="email" class="customization__modal-form__form-box__email__input"placeholder="Your message">
+                            </div>
+                            <div class="customization__modal-form__form-box__comment">
+                              <textarea name=""class="customization__modal-form__form-box__comment__input" maxlength="2000" placeholder="Your message"></textarea>
+                            </div>
+                            <button class="customization__modal-form__form-box__button" type="submit"></button>
+                          </form>
+                        </div>
+                      </div>
+
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+      </div>
     </section>
     <!--Roman Fedoriv end block -->
   </main>
