added img to presentation block

--- a/index.html
+++ b/index.html
@@ -336,6 +336,9 @@
                     <a href="#collection__header">Shop +</a>
                 </div>
             </div>
+            <div class="presentation__photo">
+                <img src="img/presentation_block/presentaton_img.webp" alt="Girl">
+            </div>
         </section>
         <!-- Sofiia block presentation end-->
 
