Created style for form in customization-form.css

--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@
                                     <div class="inner__form-section__container__grid__inner">
                                         <div class="grid__inner__box">
                                             <div class="grid__inner__box__form">
-                                                <h2 class="grid__inner__box__form__title"></h2>
-                                                <h3 class="grid__inner__box__form__subtitle"></h3>
+                                                <h2 class="grid__inner__box__form__title">Contacts</h2>
+                                                <h3 class="grid__inner__box__form__subtitle">- Ask us anything</h3>
                                                 <div class="grid__inner__box__form">
                                                     <form action="" class="customization__modal-form__form-box">
                                                         <div class="customization__modal-form__form-box__name">
@@ -455,7 +455,8 @@
                                                         <div class="customization__modal-form__form-box__comment">
                                                             <textarea name="" class="customization__modal-form__form-box__comment__input" maxlength="2000" placeholder="Your message"></textarea>
                                                         </div>
-                                                        <button class="customization__modal-form__form-box__button" type="submit"></button>
+                                                        <button class="customization__modal-form__form-box__button" type="submit">Request a
+                                                            Quote +</button>
                                                     </form>
                                                 </div>
                                             </div>
