--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <nav class="header__nav">
                     <a href="#about-us">About Us</a>
                     <a href="#catalog">Catalog</a>
-                    <a href="#">Collection</a>
+                    <a href="#collection__header">Collection</a>
                     <a href="#">Contact us</a>
                 </nav>
             </div>
