Rewrited  html and css for customization-form, created js folder and customization-form.js

--- a/index.html
+++ b/index.html
@@ -463,58 +463,37 @@
                     </div>
                 </div>
             </div>
-            <div class="customization__modal-form">
-                <div class="customization__modal-form__container">
-                    <div class="container__close-icon">
+            <div class="customization__form">
+                <div class="customizatiom__form__container">
+                    <div class="form__container__close">
+                        <span class="close__icon">&times;</span>
                     </div>
-                    <div class="customization__modal-form__container__inner">
-                        <div class="inner__form-section">
-                            <div class="inner__form-section__container">
-                                <div class="inner__form-section__container__grid">
-                                    <div class="inner__form-section__container__grid__inner">
-                                        <div class="grid__inner__box">
-                                            <div class="grid__inner__box__form">
-                                                <h2 class="grid__inner__box__form__title">Contacts</h2>
-                                                <h3 class="grid__inner__box__form__subtitle">- Ask us anything</h3>
-                                                <div class="grid__inner__box__form">
-                                                    <form action="" class="customization__modal-form__form-box">
-                                                        <div class="customization__modal-form__form-box__name">
-                                                            <input type="text"
-                                                                class="customization__modal-form__form-box__name__input"
-                                                                placeholder="Your message">
-                                                        </div>
-                                                        <div class="customization__modal-form__form-box__phone">
-                                                            <input type="tel"
-                                                                class="customization__modal-form__form-box__phone__input"
-                                                                placeholder="Your message">
-                                                        </div>
-                                                        <div class="customization__modal-form__form-box__email">
-                                                            <input type="email"
-                                                                class="customization__modal-form__form-box__email__input"
-                                                                placeholder="Your message">
-                                                        </div>
-                                                        <div class="customization__modal-form__form-box__comment">
-                                                            <textarea name=""
-                                                                class="customization__modal-form__form-box__comment__input"
-                                                                maxlength="2000" placeholder="Your message"></textarea>
-                                                        </div>
-                                                        <button class="customization__modal-form__form-box__button"
-                                                            type="submit">Request a
-                                                            Quote +</button>
-                                                    </form>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                    </div>
-
-                                </div>
+                    <div class="form__inner__container">
+                        <div class="form__container__title">
+                            <h2 class="form__title">CONTACTS</h2>
+                        </div>
+                        <div class="form__container__subtitle">
+                            <h3 class="form__subtitle"><span class="form__dash"> — </span> Ask us anything.</h3>
+                        </div>
+                        <div class="form__container__inputs">
+                            <div class="form__input__name input__container">
+                                <input type="text" class="input__name input__style" placeholder="Your Name*">
                             </div>
-
+                            <div class="form__input__phone input__container">
+                                <input type="tel" class="input__phone input__style"placeholder="Phone number*">
+                            </div>
+                            <div class="form__input__email input__container">
+                                <input type="email" class="input__email input__style"placeholder="Email*">
+                            </div>
+                            <div class="form__input__comment">
+                                <textarea type="text" class="input__comment input__style" maxlength="2000"placeholder="Your massage"></textarea>
+                            </div>
+                            <div class="form__container__button">
+                                <button class="form__button">Request a quote +</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-
             </div>
         </section>
         <!--Roman Fedoriv end block -->
@@ -522,7 +501,7 @@
 
 
     <footer></footer>
-
+    <script src="js/customization-form.js"></script>
 </body>
 
 </html>
