Added js for open and close form in customization section

--- a/index.html
+++ b/index.html
@@ -451,9 +451,9 @@
                                 <div class="customization__button">
                                     <div class="customization__button__container">
                                         <div class="customization__button__inner">
-                                            <a class="customization__button__button"><span
+                                            <button class="customization__button__button"><span
                                                     class="customization__button__text"> Request a
-                                                    Quote +</a>
+                                                    Quote +</button>
                                         </div>
                                     </div>
                                 </div>
@@ -463,10 +463,10 @@
                     </div>
                 </div>
             </div>
-            <div class="customization__form">
+            <div class="customization__form ">
                 <div class="customizatiom__form__container">
                     <div class="form__container__close">
-                        <span class="close__icon">&times;</span>
+                        <span class="close__icon ">&times;</span>
                     </div>
                     <div class="form__inner__container">
                         <div class="form__container__title">
