Added relaxes why_choose_us Svitlana block

--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
                                     <h5 class="why_choose_us__slogan__name">We create each outfit for you with great
                                         love and care.
                                     </h5>
-                                </div>
                                 <div class="why_choose_us__list-box">
                                     <h4 class="why_choose_us__list-box__title"><span
                                             class="why_choose_us__dash">—</span>Jolly brand is:</h4>
@@ -169,6 +168,16 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="container" id="container">
+                                    <div class="circle"></div>
+                                    <p id="text"></p>
+                                    <div class="pointer-container">
+                                      <span class="pointer"></span>
+                                    </div>
+                              
+                                    <div class="gradient-circle"></div>
+                                  </div>
+                            </div>
                             </div>
                         </div>
                     </div>
@@ -502,6 +511,7 @@
 
     <footer></footer>
     <script src="js/customization-form.js"></script>
+    <script src="js/relaxes why_choose.js"></script>
 </body>
 
 </html>
