Added trendу Svitlana block

--- a/index.html
+++ b/index.html
@@ -174,7 +174,6 @@
                                     <div class="pointer-container">
                                       <span class="pointer"></span>
                                     </div>
-                              
                                     <div class="gradient-circle"></div>
                                   </div>
                             </div>
@@ -345,7 +344,43 @@
             </div>
         </div>
         <!-- Sofiia block history end-->
-
+        <!--Svitlana Stasiuk block start-->
+        <section class="trendy">
+            <div class="trendy__background">
+                <div class="trendy__container" id="trendy">
+                    <div class="trendy__container__inner">
+                        <div class="trendy__container__inner__grid">
+                            <div class="trendy__container__emply"></div>
+                            <div class="trendy__container__inner__grid__top">
+                                <div class="trendy__title-box">
+                                    <h2 class="trendy__title__name">TRENDY</h2>
+                                </div>
+                                <div class="trendy__subtitle-box">
+                                    <h3 class="trendy__subtitle__name"><span
+                                            class="trendy__dash">—</span> SPRING COLLECTION.
+                                    </h3>
+                                </div>
+                                <div class="trendy_box"></div>
+                                <div class="trendy__button">
+                                    <div class="trendy__button__container">
+                                        <div class="trendy__button__inner">
+                                            <a   href="#" class="trendy__button__button"><span
+                                                    class="trendy__button__learn-more-button-black"> Learn More +
+                                            </a>
+                                            <a href="#" class="trendy__shop-now-button-white">
+                                                Shop Now +
+                                            </a>
+                                        </div>
+                                      </div>  
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--Svitlana Stasiuk block end-->
         <!-- Sofiia block presentation start -->
         <section class="presentation">
             <div class="presentation__background">
