Added counter to input-name in customization form

--- a/index.html
+++ b/index.html
@@ -486,8 +486,9 @@
                         </div>
                         <form class="form__container__inputs" action="https://formspree.io/f/myyoejyq" method="post">
                             <div class="form__input__name input__container">
-                                <input name ="name"type="text" class="input__name input__style" placeholder="Your Name*" required>
+                                <input name ="name"type="text" class="input__name input__style" placeholder="Your Name*" required>                                
                             </div>
+                            <span class="count__test"></span>
                             <div class="form__input__phone input__container">
                                 <input name = "phone"type="tel" class="input__phone input__style"placeholder="Phone number*"required>
                             </div>
