--- a/index.html
+++ b/index.html
@@ -354,48 +354,12 @@
      <h3 class="collection__slogan"><span class="collection__slogan-dash">—</span> Select Your <br class="new-line"/> Perfect Look.</h3>
      <p class="collection__description">Check out our new capsule collection and add items you like the most to the shopping cart!</p>
    </div>
-   <section class="collection__cards">
-     <article class="collection__card">
-       <img src="img/collection-block/card__knitted-midi-dress.png" alt="Knitted Midi Dress">
-       <h4 class="collection__card-text">Knitted Mini Dress</h4>
-       <p class="card__price">150,00 USD</p>
-       <div class="collection__card-button">
-         <button class="collection-card-button__add-to-cart">
-           <span class="button__add-to-cart-text">Add to Cart</span><span class="plus"> +</span>
-         </button>
-       </div>
-     </article>
-     <article class="collection__card">
-       <img src="img/collection-block/card__blazer-dress.png" alt="Blazer Dress">
-       <h4 class="collection__card-text">Blazer Dress</h4>
-       <p class="card__price">120,00 USD</p>
-       <div class="collection__card-button">
-         <button class="collection-card-button__add-to-cart">
-           <span class="button__add-to-cart-text">Add to Cart</span><span class="plus"> +</span>
-         </button>
-       </div>
-     </article>
-     <article class="collection__card">
-       <img src="img/collection-block/card__white-blazer.png" alt="White Blazer">
-       <h4 class="collection__card-text">White Blazer</h4>
-       <p class="card__price">80,00 USD</p>
-       <div class="collection__card-button">
-         <button class="collection-card-button__add-to-cart">
-           <span class="button__add-to-cart-text">Add to Cart</span><span class="plus"> +</span>
-         </button>
-       </div>
-     </article>
-     <article class="collection__card">
-       <img src="img/collection-block/card__lace-top.png" alt="Lace Top">
-       <h4 class="collection__card-text">Lace Top</h4>
-       <p class="card__price">40,00 USD</p>
-       <div class="collection__card-button">
-         <button class="collection-card-button__add-to-cart">
-           <span class="button__add-to-cart-text">Add to Cart</span><span class="plus"> +</span>
-         </button>
-       </div>
-     </article>
-   </section>
+   <div class="cards__carousel">
+     <button class="cards__carousel-back">ᐸ</button>
+     <div class="cards__carousel-slide-container"></div>
+     <button class="cards__carousel-forward">ᐳ</button>
+  </div>
+   <section class="collection__cards" id="no-display"></section>
  </div>
 </section>
   <!-- Roman Hrytsyshyn HTML Block 2 End -->
@@ -445,7 +409,8 @@
 
 
   <footer></footer>
-
+  <script src="js/collections-carousel.js"></script>
+  <script src='js/collections-cards.js'></script>
 </body>
 
 </html>
