--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
       </div>
     </div>
     <!-- Sofiia block end-->
-        <!--Svitlana Stasiuk block start-->
+
         <!--Svitlana Stasiuk block start-->
         <section class="trendy">
           <div class="trendy__background">
@@ -355,6 +355,7 @@
                       <div class="trendy__container__inner__grid">
                           <div class="trendy__container__emply"></div>
                           <div class="trendy__container__inner__grid__top">
+                            <div class="trendy__clock__box clock"></div>
                               <div class="trendy__title-box">
                                   <h2 class="trendy__title__name">TRENDY</h2>
                               </div>
@@ -363,7 +364,6 @@
                                           class="trendy__dash">—</span> SPRING COLLECTION.
                                   </h3>
                               </div>
-                              <div class="trendy_box"></div>
                               <div class="trendy__button">
                                   <div class="trendy__button__container">
                                       <div class="trendy__button__inner">
@@ -384,6 +384,7 @@
           </div>
       </section>
       <!--Svitlana Stasiuk block end-->
+
         <!-- Sofiia block presentation start -->
         <section class="presentation">
             <div class="presentation__background">
@@ -515,6 +516,7 @@
   <script src='js/collections-cards.js'></script>
   <script src="js/customization-form.js"></script>
   <script src="js/relaxes-why_choose.js"></script>
+  <script src="js/clock-trendy.js"></script>
 </body>
 
 </html>
