--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
                     <a href="#about-us">About Us</a>
                     <a href="#catalog">Catalog</a>
                     <a href="#collection__header">Collection</a>
-                    <a href="#">Contact us</a>
+                    <a href="#">Contact us</a>   
                 </nav>
+                <!-- Roman Hrytsyshyn Burger Menu start -->
+                <div class="header__burger" id="header__burger">
+                    <a href="#" class="header__burger-logo" id="header__burger-logo">☰</a>
+                </div>
+                <!-- Burger Menu end -->
             </div>
             <!-- Sofiia block end-->
             <!--Roman Hrytsyshyn HTML Block 1 start-->
