added Catalog block

--- a/index.html
+++ b/index.html
@@ -198,34 +198,6 @@
                 </p>
             </div>
             <ul class="catalog__body">
-                <li class="catalog__doby__dresses">
-                    <img src="img/catalog_block/girl1.jpg" alt="girl in a shirt" />
-                    <h4>Shirt & Tops</h4>
-                    <p>
-                        Light tops and shirts made from natural materials such as linen, silk and others.
-                    </p>
-                </li>
-                <li class="catalog__doby__dresses">
-                    <img src="img/catalog_block/girl2.webp" alt="girl in a shirt" />
-                    <h4>Dresses</h4>
-                    <p>
-                        Casual and evening dresses in mini and midi lengths for your mazing looks
-                    </p>
-                </li>
-                <li class="catalog__doby__pants">
-                    <img src="img/catalog_block/girl3.webp" alt="girl in a shirt" />
-                    <h4>Pants</h4>
-                    <p>
-                        Pants made from natural fabrics and our own collection of jeans that will last you for years
-                    </p>
-                </li>
-                <li class="catalog__doby__accessories">
-                    <img src="img/catalog_block/girl4.webp" alt="girl in a shirt" />
-                    <h4>Accessories</h4>
-                    <p>
-                        Belts, rings, gloves necklaces and more for the finishing touch to your look
-                    </p>
-                </li>
             </ul>
         </div>
         <!--Ruslan block end-->
@@ -517,6 +489,7 @@
   <script src="js/customization-form.js"></script>
   <script src="js/relaxes-why_choose.js"></script>
   <script src="js/clock-trendy.js"></script>
+  <script src="js/catalog-carousel.js"></script>
 </body>
 
 </html>
