refactoring of Catalog section: Ruslan Mansurov

--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
                     you.
                 </p>
             </div>
-            <ul class="catalog__body">
-            </ul>
+            <div class="catalog__body">
+            </div>
         </div>
         <!--Ruslan block end-->
 
