added Catalog carousel Ruslan Mansurov

--- a/index.html
+++ b/index.html
@@ -202,7 +202,11 @@
                     you.
                 </p>
             </div>
-            <div class="catalog__body">
+            <div class="catalog__all_body">
+                <button class="catalog__all_body_button_back"><</button>   
+                <div class="catalog__body">
+                </div>
+                <button class="catalog__all_body_button_forward">></button>  
             </div>
         </div>
         <!--Ruslan block end-->
